[package]
name = "twitter-bot-rs"
version = "0.1.0"
authors = ["rogovskyy <bart.rogovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_twitter_bot_lib = "0.1.2"
serde_json = "1.0.64"
serde = "1.0.125"
reqwest = "0.11.3"
tokio = { version = "1.5.0", features = ["full"] }
chrono = "0.4.19"